changed ,,review the tool''

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -270,7 +270,7 @@ package releases with a semver issue.
 Because of those plans, the commandline interface of the project is similar
 to the interface of cargo's subcommands. Additionally, cargo developers
 take part in discussions about the design of the interface \cite{issue-cli-interface}
-or sometimes even review or develop the tool.
+or sometimes even review changes to the code or develop new functionality.
 
 It is cargo-semver-checks that was chosen to be merged into cargo,
 not the other semver issues detecting tools,
