--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -235,8 +235,8 @@ The main goal of the project is to reduce the number of issues with new releases
 of libraries, which would deepen the Rust community's trust
 in the packages they are using and in the whole ecosystem.
 
-The tool is \textit{not} meant to detect all possible semver breaks,
-but the detection mechanism and existing lints are written
+The tool is \textit{not} meant to detect all possible semver breaks.
+Instead, the detection mechanism and existing lints are written
 with a strong focus on finding only true-positives.
 Each false-positive (which is defined as a scenario where the tool
 wrongly reports a semver break) is perceived as a bug in the tool.
