--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -245,7 +245,7 @@ There are two advantages with this approach:
 	\item the tool is suited to be used in continuous integration
 		for checking semver issues in commits or Pull Requests
 		-- it reports semver breaks only when
-		its output shouldn't be ignored and requires manual inspection,
+		its output should not be ignored and requires manual inspection,
 	\item we're avoiding a scenario in which
 		when an user encounters false-positives, they become frustated
 		and their trust in the tool is reduced, so they are
