--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -243,7 +243,7 @@ wrongly reports a semver break) is perceived as a bug in the tool.
 There are two advantages with this approach:
 \begin{itemize}
 	\item the tool is suited to be used in continuous integration
-		for checking semver issues in commits or Pull Requests
+		for finding semver issues in commits or Pull Requests
 		-- it reports semver breaks only when
 		its output should not be ignored and requires manual inspection,
 	\item we're avoiding a scenario in which
