--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -247,7 +247,7 @@ There are two advantages with this approach:
 		-- it reports semver breaks only when
 		its output should not be ignored and requires manual inspection,
 	\item we're avoiding a scenario in which
-		when an user encounters false-positives, they become frustated
+		a user encounters false-positives, they become frustated
 		and their trust in the tool is reduced, so they are
 		less likely to use the tool again.
 \end{itemize}
