--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -248,7 +248,7 @@ There are two advantages with this approach:
 		its output should not be ignored and requires manual inspection,
 	\item we're avoiding a scenario in which
 		a user encounters false-positives, they become frustated
-		and their trust in the tool is reduced, so they are
+		and their trust in the tool is reduced, making them
 		less likely to use the tool again.
 \end{itemize}
 
