--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -253,8 +253,8 @@ There are two advantages with this approach:
 \end{itemize}
 
 Similarly to the Rust compiler, the reports contain
-detailed information about the found issues, including
-the line of code in which the issue was found, a short and long description
+detailed information about the issues, including
+the line of code in which each one was found, both short and long description
 of the triggered lint and possibly reference links to the Rust documentation
 describing the semver issue in more detail.
 
