--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -290,7 +290,7 @@ a path to the baseline crate.
 
 Because a large portion of libraries are currently developed using GitHub,
 we are also providing a continuous integration job
-via GitHub Actions to automatically check whether
+via GitHub Actions to automatically ensure that
 a Pull Request satisfies semver.
 
 \subsection{Running locally}
