--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -302,7 +302,7 @@ by passing the path to its manifest.
 The baseline crate can be passed in a similar manner,
 but alternatively it's possible to either
 specify a version of the crate in the registry with which the
-current crate should be compared, or
+current crate should be compared with, or
 (assuming that the current directory is a git repository)
 by passing a git revision where the baseline project is located.
 
