--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -255,7 +255,7 @@ There are two advantages with this approach:
 Similarly to the Rust compiler, the reports contain
 detailed information about the issues, including
 the line of code in which each one was found, both short and long description
-of the triggered lint and possibly reference links to the Rust documentation
+of the triggered lint and, if possible, reference links to the Rust documentation
 describing the semver issue in more detail.
 
 \section{Plans to merge the tool into cargo}
