--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -263,7 +263,7 @@ describing the semver issue in more detail.
 There are already on-going plans to merge cargo-semver-checks into
 the official Rust development toolchain,
 which has been initiated by one of the developers working on cargo \cite{issue-merge-cargo}.
-That would mean that the tool would be available to all Rust programmers
+That would make the tool available to all Rust programmers
 through a cargo subcommand and would be a huge step towards reducing the number of
 package releases with a semver issue.
 
