--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -265,7 +265,7 @@ the official Rust development toolchain,
 which has been initiated by one of the developers working on cargo \cite{issue-merge-cargo}.
 That would make the tool available to all Rust programmers
 through a cargo subcommand and would be a huge step towards reducing the number of
-package releases with a semver issue.
+package releases with semver issues.
 
 Because of those plans, the commandline interface of the project is similar
 to the interface of cargo's subcommands. Additionally, cargo developers
