--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -316,7 +316,7 @@ by passing the path to the manifest that defines the workspace.
 Seeing that GitHub is the most popular internet hosting service for version control
 amongst the Rust libraries developers,
 one of the goals of the project is to implement a GitHub Action
-that checks whether a given git branch haven't violated semver with recent changes.
+that checks whether a given git branch hasn't violated semver with recent changes.
 
 There are two reasons as to why this continuous integration job is beneficial for the developers:
 \begin{itemize}
