--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -345,7 +345,7 @@ into their workflow:
 	\item the community wasn't satisfied with the implemented GitHub Action to the point where
 		some developers coded their own continuous integration job using just the command-line interface of the tool,
 	\item some existing lints had false-positives,
-	\item the codebase was not in a state where new contributors could easily implement their first changes
+	\item the codebase was not in a state where new contributors could easily begin making changes
 		to the project (which is crucial for the project to flourish in the long term).
 		For example, adding new lints and tests wasn't intuitive and required many manual steps, 
 		the filenames and variable names were not always descriptive enough
