--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -349,7 +349,7 @@ into their workflow:
 		to the project (which is crucial for the project to flourish in the long term).
 		For example, adding new lints and tests wasn't intuitive and required many manual steps, 
 		the filenames and variable names were not always descriptive enough
-		and the code lacked comments that explained some of the logic and decisions behind the code.
+		and the code lacked comments that explained some of the logic and decisions behind it.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
