--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -109,7 +109,7 @@ on the Rust community.
 
 With its first stable release in 2015, Rust is a relatively new programming language that
 puts a strong emphasis on type-safety, memory-safety, performance and concurrency. Unlike
-other memory-safe languages, Rust does not use reference counting nor garbage collector.
+other memory-safe languages, Rust does not use reference counting nor a garbage collector.
 Instead it tracks the object lifetime of all the program's references during compilation,
 using its built-in mechanism named "borrow checker".
 
